<resources>
    <string name="app_name">Gram Soolra</string>
    <string name="hi_wecome_back">Hi, Wecome Back! 👋</string>
    <string name="hello_again_you_ve_been_missed">Hello again, you’ve been missed!</string>
    <string name="mobile_number">Mobile Number <font color="@color/red">*</font></string>
    <string name="password">Password <font color="@color/red">*</font></string>
    <string name="please_enter_your_mobile_number">Please Enter Your Mobile Number</string>
    <string name="Please_enter_your_password">Please Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_products_found">No Products found</string>
    <string name="my_cart">My Cart</string>
    <string name="gramsootra">Gramsootra</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="nothing_found">Nothing Found</string>
</resources>