<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:id="@+id/headerHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp"
            android:layout_weight="1"
            android:src="@drawable/ic_back_arrow"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/my_cart"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_3sdp"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_18sdp"
            android:layout_weight="1.5"
            android:src="@drawable/notification"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_18sdp"
            android:layout_weight="1.5"
            android:src="@drawable/cart_plain"
            />

    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/_12sdp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/totalAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Rs.0"
                        android:textSize="@dimen/_14ssp"
                        android:layout_weight="1"
                        android:gravity="end"
                        />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/primary_color"
                    app:cornerRadius="@dimen/_2sdp"
                    android:textColor="@color/white"
                    android:text="@string/pay_now"
                    android:textSize="@dimen/_13ssp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/cartProgressBar"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateTint="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNoProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_products_found"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerHome" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>